<resources>
    <string name="app_name">TextColor_OnButtonClick</string>
    <!--Text Numbers-->
    <string name="text1">Text 1</string>
    <string name="text2">Text 2</string>
    <string name="text3">Text 3</string>
    <string name="text4">Text 4</string>
    <string name="text5">Text 5</string>
    <string name="text6">Text 6</string>
    <string name="text7">Text 7</string>
    <string name="text8">Text 8</string>
    <string name="text9">Text 9</string>
    <string name="text0">Text 0</string>
    <!--Button Numbers-->
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
    <string name="button6">Button 6</string>
    <string name="button7">Button 7</string>
    <string name="button8">Button 8</string>
    <string name="button9">Button 9</string>
    <string name="button0">Button 0</string>

    <string name="text_desc">Tap the buttons to apply color on Texts</string>

</resources>